0024072: VC 2009 64-bit compiler crashes while compiling IntPoly_ShapeSection.cxx